fix: handle max length string with ellipsis

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2274,7 +2274,7 @@
     "chooseName": "Choose a name",
     "placeholder": "Tony's Stax",
     "remainingCharacters": "{{ remainingCharacters }} characters remaining",
-    "renamed": "{{ productName }} name changed to “{{ name }}” "
+    "renamed": "{{ productName }} name changed to \n“{{ name }}” "
   },
   "deviceLocalization": {
     "language": "Language",
