--- a/apps/ledger-live-desktop/static/i18n/es/app.json
+++ b/apps/ledger-live-desktop/static/i18n/es/app.json
@@ -819,12 +819,44 @@
       "redelegation" : {
         "title" : "Por si no lo sabías,",
         "description" : "El validador de Ledger pone en participación con una comisión inferior a la del validador que estás utilizando.",
-        "cta" : "Redelegar con Ledger"
+        "cta" : "Redelegar con Ledger",
+        "linkText" : "¿Qué es la redelegación y cuánto tarda?",
+        "solana" : {
+          "title" : "¿Lo sabías?",
+          "description" : "Ledger ofrece una comisión más baja que tu validador. Este proceso puede tardar hasta 4 días."
+        },
+        "near" : {
+          "title" : "¿Lo sabías?",
+          "description" : "Ledger ofrece una comisión más baja que tu validador. Este proceso puede tardar hasta 65 horas."
+        },
+        "elrond" : {
+          "title" : "¿Lo sabías?",
+          "description" : "Ledger ofrece una comisión más baja que tu validador. Este proceso puede tardar hasta 10 días."
+        }
       },
       "delegation" : {
         "title" : "Por si no lo sabías,",
         "description" : "El validador de Ledger pone en participación tus {{asset}} con una comisión del {{commission}}%.",
-        "cta" : "Participar con Ledger"
+        "cta" : "Participar con Ledger",
+        "linkText" : "Más información",
+        "ethereum" : {
+          "lido" : {
+            "title" : "Por si no lo sabías,",
+            "description" : "Pon tus Ethereum en participación con Lido y gana recompensas diarias. Sin periodo de inmovilización. Sin depósito mínimo.",
+            "cta" : "Participar con Lido"
+          },
+          "kiln" : {
+            "title" : "No hagas solo HODL. Haz crecer tus ETH",
+            "description" : "¿Tienes más de 32 ETH? Consigue recompensas pasivas poniendo tu ETH de forma segura en participación con Kiln.",
+            "cta" : "Participar con Kiln"
+          }
+        },
+        "near" : {
+          "description" : "Pon tus NEAR en participación con el validador Ledger by Figment. Tus monedas seguirán siendo tuyas y estarán respaldadas por la seguridad sin concesiones de Ledger."
+        },
+        "elrond" : {
+          "description" : "Pon tus ELROND en participación con el validador Ledger by Figment. Tus monedas seguirán siendo tuyas y estarán respaldadas por la seguridad sin concesiones de Ledger."
+        }
       }
     }
   },
@@ -1399,7 +1431,7 @@
         "label" : "Popular"
       },
       "earn" : {
-        "title" : "Gana",
+        "title" : "Poner en participación",
         "description" : "Haz crecer tus cripto con Ledger"
       }
     }
@@ -1814,7 +1846,7 @@
       "used" : "Utilizado",
       "firmwareAvailable" : "El firmware está desactualizado:",
       "firmwareUpToDate" : "El firmware está actualizado:",
-      "genuine" : "El dispositivo es auténtico",
+      "genuine" : "Tu dispositivo es original",
       "incomplete" : "No se reconocieron algunas aplicaciones. Desinstálalas y luego vuelve a instalarlas."
     },
     "applist" : {
@@ -2236,6 +2268,13 @@
     },
     "switchButton" : "Cambiar a {{language}}",
     "no" : "Prefiero no hacerlo"
+  },
+  "deviceRename" : {
+    "title" : "Renombrar {{ productName }}",
+    "chooseName" : "Elige un nombre",
+    "placeholder" : "Stax de Tony",
+    "remainingCharacters" : "Quedan {{ remainingCharacters }} caracteres",
+    "renamed" : "{{ productName }} name changed to \n“{{ name }}” "
   },
   "deviceLocalization" : {
     "language" : "Idioma",
@@ -3761,6 +3800,9 @@
       "catalogRampServerDesc" : "Cambiar entre varios proveedores de operaciones",
       "enablePlatformDevTools" : "Habilitar herramientas de desarrollador de plataforma",
       "enablePlatformDevToolsDesc" : "Habilitar ventana de herramientas de desarrollador de aplicaciones de plataforma",
+      "customLockScreen" : "Activos de la pantalla de bloqueo personalizada",
+      "customLockScreenDesc" : "Depurar activos gráficos de la pantalla de bloqueo personalizada",
+      "customLockScreenCTA" : "Ejecutar",
       "featureFlagsTitle" : "Marcas de funciones definidas que se usan en Ledger Live",
       "featureFlagsDesc" : "Los valores anulados se restablecerán si se vuelve a iniciar la aplicación. Solo se aceptarán las cadenas JSON válidas.",
       "featureFlagsEdit" : "Editar",
@@ -3776,7 +3818,9 @@
       "runLocalAppDeleteButton" : "Borrar",
       "runLocalAppOpenButton" : "Abrir",
       "enableLearnStagingUrl" : "URL de ensayo de la página Learn",
-      "enableLearnStagingUrlDesc" : "Activar el URL de ensayo de la página Learn."
+      "enableLearnStagingUrlDesc" : "Activar el URL de ensayo de la página Learn.",
+      "openOnboardingAppInstallDebug" : "Abre la pantalla de depuración de la instalación de aplicaciones iniciales",
+      "openOnboardingAppInstallDebugDesc" : "Abre una pantalla con los componentes del paso de sincronización de la instalación de aplicaciones iniciales"
     },
     "currencies" : {
       "selectPlaceholder" : "Seleccionar activo cripto",
@@ -3942,6 +3986,10 @@
       "fullNode" : {
         "title" : "Conectar nodo completo de Bitcoin",
         "desc" : "Configura tu nodo completo de Bitcoin para sincronizar y enviar transacciones sin usar el Explorer de Ledger."
+      },
+      "filterTokenOperationsZeroAmount" : {
+        "title" : "Ocultar transacciones con tokens cuando el valor es 0",
+        "desc" : "Ocultar transacciones con tokens sin valor puede evitar posibles ataques de contaminación de direcciones sobre Ethereum, Polygon, BSC, Tron..."
       }
     }
   },
@@ -5521,6 +5569,10 @@
       "title" : "Error al cargar la imagen desde el archivo.",
       "description" : "Vuelve a intentarlo con otra imagen"
     },
+    "ImageLoadFromNftError" : {
+      "title" : "Error al cargar la imagen del NFT",
+      "description" : "Vuelve a intentarlo con otro NFT"
+    },
     "ImageDownloadError" : {
       "title" : "Error al descargar la imagen",
       "description" : "Vuelve a intentarlo con otra imagen"
@@ -5593,6 +5645,13 @@
       "descriptionWithProductName" : "Primero debes configurar tu {{ productName }}.\nTe guiaremos a lo largo del proceso de configuración.",
       "goToOnboardingButton" : "Configurar mi dispositivo",
       "goToOnboardingButtonWithProductName" : "Configurar mi {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "Se produjo un fallo al recuperar las transacciones",
+      "description" : "Se produjo un error inesperado con los exploradores. Inténtalo de nuevo más tarde"
+    },
+    "GasEstimationError" : {
+      "title" : "Se produjo un fallo en la estimación del gas"
     }
   },
   "cryptoOrg" : {
@@ -5626,12 +5685,19 @@
   },
   "customImage" : {
     "title" : "Pantalla de bloqueo personalizada",
+    "managerCTA" : "Imagen de pantalla de bloqueo",
     "steps" : {
       "choose" : {
         "stepLabel" : "Elige una imagen",
         "description" : "Elige una imagen para establecerla como (...)",
         "pickFromNftGallery" : "Seleccionar de mi galería de NFT",
-        "upload" : "Cargar desde mi PC"
+        "myNfts" : "Mis NFTs",
+        "upload" : "Cargar desde mi PC",
+        "chooseNft" : "Elige un NFT",
+        "selectNft" : "Elegir NFT",
+        "previousSelectNft" : "Atrás",
+        "nftEmptyStateTitle" : "Todavía no hay NFTs para mostrar",
+        "nftEmptyStateDescription" : "Empieza agregando NFTs a tu billetera."
       },
       "adjust" : {
         "stepLabel" : "Ajustar imagen",
@@ -5657,5 +5723,37 @@
     },
     "customImageSet" : "Pantalla de bloqueo establecida",
     "finishCTA" : "Finalizar"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "¿Quieres instalar las mismas aplicaciones que tenías en el {{deviceName}}?",
+      "titleNoDeviceName" : "¿Quieres instalar las mismas aplicaciones que tenías en tu dispositivo Ledger anterior?",
+      "subtitle" : "Puedes instalar o eliminar aplicaciones en cualquier momento.",
+      "installCTA" : "Restaurar aplicaciones",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "default" : {
+      "title" : "El {{ productName }} usa aplicaciones para posibilitar transacciones seguras en la cadena de bloques",
+      "subtitle" : "Te recomendamos descargar un conjunto de aplicaciones por defecto. Puedes descargar otras más adelante.",
+      "installCTA" : "Instalar aplicaciones",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "progress" : {
+      "loading" : "Cargando...",
+      "resolving" : "Resolviendo dependencias",
+      "progress" : "Instalando aplicaciones: {{progress}}%",
+      "disclaimer" : "Agrega o elimina aplicaciones en cualquier momento desde Ledger Live."
+    },
+    "cancelled" : {
+      "title" : "Se ha cancelado la instalación de aplicaciones en {{productName}}",
+      "subtitle" : "{{productName}} necesita aplicaciones de cadena de bloques para aprobar tus transacciones de cripto y NFTs.",
+      "installCTA" : "Instalar ahora",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "locked" : {
+      "title" : "Tu {{productName}} está bloqueado",
+      "subtitle" : "Desbloquea tu {{productName}} y reinicia la instalación.",
+      "installCTA" : "Reiniciar instalación"
+    }
   }
 }
